--- a/Unidad01/04/Calculadora/Estilo.css
+++ b/Unidad01/04/Calculadora/Estilo.css
@@ -1,13 +1,15 @@
 #appCalculator{
     height: 560px;
     width: 300px;
-    background-color: black;
+    background-color: #4d4d4d;
+    text-align: center;
+    margin: 0px auto;
 }
 
 #appCalculator form{
     height: 100%;
     width: 100%;
-    background-color: rgb(0, 0, 0);
+    background-color:  #464d4b;
 }
 
 #appCalculator input[type=text]{
@@ -21,18 +23,46 @@
     font-size: 50px;
     border: 0;
     outline:none;
-    background-color: black;
+    background-color: #2d2e2d;
+    margin: 0%;
 }
 
-#appCalculator input[type=button], input[type=reset]{
+#appCalculator input[type=button]{
     width: 22%;
     cursor: pointer;
     font-family: 'Roboto',sans-serif;
     font-weight: bold;
     font-size: 26px;
-    color: black;
+    color: #1e1e1f;
     padding: 18px;
     margin: 3px;
     border:0;
-    border-radius: 100%;
+    border-radius: 35%;
+   /*background-color: #a5a8ad*/
+}
+
+#appCalculator .Azul{
+    background-color: #1759e8;
+    
+}
+
+#appCalculator .Gris{
+    background-color: #c1c4c9;
+    
+}
+
+#appCalculator .Verde{
+    background-color: #b7f046;
+}
+
+#appCalculator .Azul:hover{
+    background-color: #468ff0;
+}
+
+#appCalculator .Gris:hover{
+    background-color: #777d85;
+}
+
+#appCalculator .Verde:hover{
+    background-color: #89c43b;
 }
