--- a/Unidad01/04/index.css
+++ b/Unidad01/04/index.css
@@ -1,6 +1,6 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
-    color: burlywood;
+    color: white;
 }
 
 body{
@@ -46,6 +46,7 @@ button:focus{
 
 }
 .display{
+
     grid-column: 1 / -1;
     padding: 16px;
     display: flex;
@@ -59,4 +60,48 @@ button:focus{
     word-break: break-all;
     font-size: 25px;
     
+    
 }
+
+
+#txt1{
+
+    display: flex;
+    padding: 15px;
+    width: 213px;
+    height: 50px;
+    text-align: 1.5em;
+    font-size: large;
+    background-color: black;
+    
+    border: none;
+    
+
+}
+
+#txt1:focus{
+
+    
+    outline: 0 none;
+
+}
+#txt2:focus{
+
+    outline: 0 none;
+
+}
+
+#txt2{
+    display: flex;
+    padding: 15px;
+    width: 213px;
+    height: 50px;
+    text-align: right;
+    font-size: large;
+    background-color: black;
+    border: none;
+
+}
+
+    
+    
