--- a/Unidad01/04/Calculadora/Estilo.css
+++ b/Unidad01/04/Calculadora/Estilo.css
@@ -17,7 +17,7 @@
     width: 270px;
     cursor: default;
     font-family: 'Roboto',sans-serif;
-    color: white;
+    color: #c1c4c9;
     padding: 15px;
     text-align: right;
     font-size: 50px;
