--- a/Unidad01/04/index.css
+++ b/Unidad01/04/index.css
@@ -26,6 +26,40 @@ body{
 
 }
 
+
+.history{
+
+    display: grid;
+    grid-template-columns: repeat(4,75px);
+    grid-template-rows: 160px repeat(6,75px);
+    background-color: gray;
+    padding: 30px;
+    border-radius: 32px;
+
+}
+.display2{
+
+    grid-column: 1 / -1;
+    padding: 16px;
+    display: flex;
+    margin: 10px 10px -440px ;
+    flex-direction: column;
+    align-items: flex-end;
+    background-color: black;
+    /* border-radius: 32px; */
+    text-align: right;
+    justify-content: space-between;
+    word-break: break-all;
+    font-size: 25px;
+    border-radius: 32px;
+
+
+
+}
+
+
+
+
 button{
     cursor: pointer;
     margin: 5px;
@@ -79,6 +113,24 @@ button:focus{
     
 
 }
+#his{
+
+    display: flex;
+    padding: 15px;
+    width: 213px;
+    height: 50px;
+    text-align: center;
+    font-size: xx-large;
+    
+    background-color: black;
+    
+    border: none;
+    
+
+
+}
+
+
 
 #txt1:focus{
 
@@ -98,6 +150,17 @@ button:focus{
     width: 213px;
     height: 50px;
     text-align: right;
+    font-size: large;
+    background-color: black;
+    border: none;
+
+}
+#his2{
+    display: flex;
+    padding: 15px;
+    width: 213px;
+    height: 440px;
+    text-align: left;
     font-size: large;
     background-color: black;
     border: none;
