--- a/Unidad01/04/18100157/Style.css
+++ b/Unidad01/04/18100157/Style.css
@@ -1,11 +1,19 @@
 #Elementos{
+    background-color: aqua;
     position: absolute;
     left: 50%;
     margin-left: -150px;
     top: 50%;
     margin-top: -200px;
+    border: 5px solid darkblue;
+    border-radius: 15px;
 }
-
+#num1{
+    border-radius: 15px;
+}
+#num2{
+    border-radius: 15px;
+}
 .container{
     position: absolute;
     left: 5%;
@@ -24,4 +32,8 @@
 .Resultados input{
     width:245px;
     height:60px;
+}
+
+.button{
+    border-radius: 100%;
 }
