--- a/Unidad01/Colores/index.css
+++ b/Unidad01/Colores/index.css
@@ -1,2 +1,7 @@
-input[type='range'] { -webkit-appearance: none !important; background:red; height:7px; }
+#nombre{
+    
+    width: 25%;
+    height: 25%;
+    font-size: xx-large;
 
+}
